Removed extra comma on sample json config

--- a/config.sample.json
+++ b/config.sample.json
@@ -12,7 +12,7 @@
     "saveUninitialized": true
   },
   "email": {
-    "sender": "your@mail.com",
+    "sender": "your@mail.com"
   },
   "s3": {
   }
