--- a/client/package.json
+++ b/client/package.json
@@ -10,22 +10,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-syntax-decorators": "^6.8.0",
-    "babel-plugin-transform-react-jsx": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "preact-compat": "^1.9.0",
-    "webpack": "^1.13.1"
+    "babel-core": "6.10.4",
+    "babel-loader": "6.2.4",
+    "babel-plugin-syntax-decorators": "6.8.0",
+    "babel-plugin-transform-react-jsx": "6.8.0",
+    "babel-preset-es2015": "6.9.0",
+    "preact-compat": "1.9.0",
+    "webpack": "1.13.1"
   },
   "dependencies": {
-    "codemirror": "^5.16.0",
-    "isomorphic-fetch": "^2.2.1",
-    "material-design-lite": "^1.1.3",
-    "preact": "^5.1.0-beta.22",
-    "preact-mdl": "^1.3.0",
-    "preact-router": "^2.0.0",
-    "radium": "^0.17.1",
-    "wildemitter": "^1.2.0"
+    "codemirror": "5.16.0",
+    "isomorphic-fetch": "2.2.1",
+    "material-design-lite": "1.1.3",
+    "preact": "5.1.0-beta.22",
+    "preact-mdl": "1.3.0",
+    "preact-router": "2.0.0",
+    "radium": "0.17.1",
+    "wildemitter": "1.2.0"
   }
 }
