--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.4.5",
-    "body-parser": "^1.15.2",
-    "connect-mongo": "^1.2.1",
-    "emailjs": "^1.0.5",
-    "express": "^4.14.0",
-    "express-session": "^1.13.0",
-    "monk": "^2.1.0",
-    "multer": "^1.1.0",
-    "multer-s3": "^2.3.2",
-    "passwordless": "^1.1.1",
-    "passwordless-mongostore": "^0.1.3",
-    "pug": "^2.0.0-beta3"
+    "aws-sdk": "2.4.5",
+    "body-parser": "1.15.2",
+    "connect-mongo": "1.2.1",
+    "emailjs": "1.0.5",
+    "express": "4.14.0",
+    "express-session": "1.13.0",
+    "monk": "2.1.0",
+    "multer": "1.1.0",
+    "multer-s3": "2.3.2",
+    "passwordless": "1.1.1",
+    "passwordless-mongostore": "0.1.3",
+    "pug": "2.0.0-beta3"
   }
 }
