--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --watch"
+    "start": "webpack --watch",
+    "test": "mocha --compilers js:babel-register"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "babel-plugin-syntax-decorators": "6.8.0",
     "babel-plugin-transform-react-jsx": "6.8.0",
     "babel-preset-es2015": "6.9.0",
+    "mocha": "^2.5.3",
     "preact-compat": "1.9.0",
     "webpack": "1.13.1"
   },
