--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "monk": "2.1.0",
     "multer": "1.1.0",
     "multer-s3": "2.3.2",
+    "node-uuid": "^1.4.7",
     "passwordless": "1.1.1",
     "passwordless-mongostore": "0.1.3",
     "pug": "2.0.0-beta3"
