--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ node_modules
 config.json
 npm-debug.log
 public/app.js
+public/uploads/*
+!public/uploads/.gitkeep
+!public/uploads/s
+public/uploads/s/*
+!public/uploads/s/.gitkeep
