--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-syntax-decorators": "6.8.0",
     "babel-plugin-transform-react-jsx": "6.8.0",
     "babel-preset-es2015": "6.9.0",
+    "json-loader": "^0.5.4",
     "mocha": "^2.5.3",
     "preact-compat": "1.9.0",
     "webpack": "1.13.1"
