--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "codemirror": "5.16.0",
     "isomorphic-fetch": "2.2.1",
     "material-design-lite": "1.1.3",
-    "preact": "5.1.0-beta.22",
+    "preact": "5.6.0",
     "preact-mdl": "1.3.0",
     "preact-router": "2.0.0",
     "radium": "0.17.1",
