--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs": "1.0.5",
     "express": "4.14.0",
     "express-session": "1.13.0",
+    "glamor": "^2.17.14",
     "isomorphic-fetch": "2.2.1",
     "monk": "2.1.0",
     "multer": "1.1.0",
@@ -24,7 +25,8 @@
     "node-uuid": "1.4.7",
     "passwordless": "1.1.1",
     "passwordless-mongostore": "0.1.3",
-    "pug": "2.0.0-beta3"
+    "pug": "2.0.0-beta3",
+    "radium": "^0.18.1"
   },
   "devDependencies": {
     "offline-plugin": "3.4.2",
