--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "2.4.5",
+    "axios": "^0.15.2",
     "body-parser": "1.15.2",
     "connect-mongo": "1.2.1",
     "cors": "2.8.1",
     "emailjs": "1.0.5",
     "express": "4.14.0",
     "express-session": "1.13.0",
-    "isomorphic-fetch": "2.2.1",
     "monk": "2.1.0",
     "multer": "1.1.0",
     "multer-s3": "2.3.2",
     "node-uuid": "1.4.7",
     "passwordless": "1.1.1",
     "passwordless-mongostore": "0.1.3",
-    "pug": "2.0.0-beta3"
+    "pug": "2.0.0-beta3",
+    "unzip-to-s3": "^1.0.0"
   },
   "devDependencies": {
     "offline-plugin": "3.4.2",
