--- a/cmdline/Makefile
+++ b/cmdline/Makefile
@@ -1,2 +1,3 @@
 test:
-	node cmdline.js  'ehhhdd'
+	node cmdline.js  --title 'super title' --mode ar --text 'I want a scene showing a text saying "Hi!".' --output examples/output.html
+	# node cmdline.js  --title 'super title' --mode vr 'A sky at sunset' > examples/output.html
