move to firebase + zeit

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-node_modules
-.DS_Store
-config.json
-npm-debug.log
-public/app.js
-public/*.app.js
-public/uploads/*
-!public/uploads/.gitkeep
-!public/uploads/s
-public/uploads/s/*
-!public/uploads/s/.gitkeep
+.env
