--- a/client/config.sample.json
+++ b/client/config.sample.json
@@ -1,3 +1,8 @@
 {
-  "assetsHost": "/uploads"
+  "assetsHost": "/uploads",
+  "loginRedirectUrl": "https://gurivr.com",
+  "analyticsId": "",
+  "mapsKey": "",
+  "firebase": {
+  }
 }
