--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["es2015"],
   "plugins": [
-    ["transform-react-jsx", { "pragma": "h" }]
+    ["transform-react-jsx", { "pragma": "h" }],
+    "fast-async"
   ]
 }
